almost done. need to fix header vertical align and check the home work requirements

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --white-color: #ffffff;
   --secondary-background-color: #f5f4fa;
   --header-border-color: #ececec;
+  --project-item-border: #EEEEEE;
   --logo-font: raleway;
 }
 
@@ -303,6 +304,12 @@ header {
 
 /* FILTER SECTION */
 
+.filter {
+  margin: 0 auto;
+  display: block;
+  width: 586px;
+  margin-bottom: 50px;
+}
 .filter-button {
   font-family: var(--main-text-font), sans-serif;
   font-size: 16px;
@@ -311,7 +318,18 @@ header {
   background-color: var(--secondary-background-color);
   text-align: center;
   letter-spacing: 0.03em;
+  padding: 6px 22px;
+  border: 0;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
+
+
+
+.filter .item:nth-child(n+2){
+  padding-left: 8px;
+}
+
 .filter-button:focus,
 .filter-button:hover {
   background-color: var(--accent-color);
@@ -321,12 +339,30 @@ header {
 
 /* PROJECT SECTION */
 
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.project-list .item {
+  border: 1px solid var(--project-item-border);
+  flex-basis: calc((100% - 60px) / 3)
+
+}
+
+.project-image {
+  width: 100%;
+}
+
 .project-name {
   font-size: 18px;
   line-height: 2;
   font-weight: 700;
   letter-spacing: 0.06em;
   color: var(--main-text-color);
+  margin-left: 24px;
 }
 
 .project-type {
@@ -334,6 +370,7 @@ header {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  margin-left: 24px;
 }
 
 .current.link {
